# f5mobile-cms

./: Dockerfile  celery_config.py  compose.yaml  config.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt
databases/: database.py
routes/: categories.py  images.py  products.py  subcategories.py
utils/: common.py
workers/: tasks.py
