[tool.poetry]
name = "f5mobile-cms"
version = "0.1.0"
description = ""
authors = ["vanToan <toantv@bizflycloud.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
mysqlclient = "^2.2.4"
pandas = "^2.2.2"
celery = "^5.4.0"
redis = "^5.0.7"
openpyxl = "^3.1.5"
sqlmodel = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
